[project]
name = "npsnav"
version = "0.1.0"
description = "NPSNAV tracker"
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "beautifulsoup4==4.12.2",
    "bs4>=0.0.2",
    "csscompressor==0.9.5",
    "fake-useragent==1.5.1",
    "jinja2==3.1.4",
    "jsmin==3.0.1",
    "minify-html>=0.18.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber==0.10.3",
    "pypdf2==3.0.1",
    "python-dateutil==2.8.2",
    "requests>=2.32.5",
    "xlrd==1.2.0",
]
